# Bingo

./: CMakeLists.txt  README.md  cmd.txt  readme.md
include/: Bingo.cuh  api.h  apps.h  gpuMem.cuh  graph.cuh  operation.cuh  test.cuh  type.h  utils.cuh
src/: a  api.h  apps.cu  cp.sh  deepwalk.cu  main.cpp  operation.cuh  type.h  utils.cuh
src/apps/: deepwalk.cu
